[package]
name = "rsa_rs"
version = "0.1.1"
edition = "2021"
description = "rust rsa library -- UNTESTED HOBBY PROJECT -- DO NOT USE FOR SERIOUS APPLICATIONS"
repository = "https://github.com/leninRessurect/rsa_rs"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
